feat: analytics code rendering

--- a/dev/templates/master.pug
+++ b/dev/templates/master.pug
@@ -67,7 +67,11 @@ html
       <% } %>
     <% } %>
 
+    != analyticsCode.head
+
     block head
 
   body
+    != analyticsCode.bodyStart
     block body
+    != analyticsCode.bodyEnd
