--- a/server/views/master.pug
+++ b/server/views/master.pug
@@ -51,7 +51,11 @@ html
       
     
 
+    != analyticsCode.head
+
     block head
 
   body
+    != analyticsCode.bodyStart
     block body
+    != analyticsCode.bodyEnd
