feat: locales availability + IE display mode

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -18,7 +18,7 @@
 @import 'layout/md2';
 
 // @import '../libs/twemoji/twemoji-awesome';
-@import '../libs/prism/prism.css';
+// @import '../libs/prism/prism.css';
 @import '~vue-tour/dist/vue-tour.css';
 @import '~vue-status-indicator/styles.css';
 @import '~xterm/dist/xterm.css';
