--- a/server/views/legacy/master.pug
+++ b/server/views/legacy/master.pug
@@ -27,10 +27,6 @@ html
       link(rel='icon', type='image/png', sizes=favsize + 'x' + favsize, href='/favicons/favicon-' + favsize + 'x' + favsize + '.png')
     link(rel='manifest', href='/manifest.json')
 
-    //- Site Properties
-    script.
-      var siteConfig = !{JSON.stringify(siteConfig)}; var siteLangs = !{JSON.stringify(langs)}
-
     //- Icon Set
     if config.theming.iconset === 'mdi'
       link(
@@ -54,6 +50,11 @@ html
     //- CSS
     
 
+    script(
+      crossorigin='anonymous'
+      src='https://polyfill.io/v3/polyfill.min.js?features=EventSource'
+    )
+
     //- JS
     
       
@@ -66,7 +67,7 @@ html
       
     script(
       type='text/javascript'
-      src='/js/app.js'
+      src='/js/legacy.js'
       )
       
     
