--- a/server/views/legacy/login.pug
+++ b/server/views/legacy/login.pug
@@ -2,7 +2,7 @@ extends master.pug
 
 block body
   #root
-    .login-deprecated Your browser is outdated. Upgrade to a #[a(href='https://bestvpn.org/outdatedbrowser/en', rel='nofollow') modern browser].
+    .login-deprecated!= t('outdatedBrowserWarning', { modernBrowser: '<a href="https://bestvpn.org/outdatedbrowser/en" rel="nofollow">' + t('modernBrowser') + '</a>', interpolation: { escapeValue: false } })
     .login
       .login-dialog
         if err
@@ -12,12 +12,12 @@ block body
           select(name='strategy')
             each str in formStrategies
               option(value=str.key, selected)= str.title
-          input(type='text', name='user', placeholder='Username / Email')
-          input(type='password', name='pass', placeholder='Password')
-          button(type='submit') Login
+          input(type='text', name='user', placeholder=t('auth:fields.emailUser'))
+          input(type='password', name='pass', placeholder=t('auth:fields.password'))
+          button(type='submit')= t('auth:actions.login')
         if socialStrategies.length
           .login-social
-            h2 or login using...
+            h2= t('auth:orLoginUsingStrategy')
             each str in socialStrategies
               a.login-social-icon(href='/login/' + str.key, class=str.color)
                 != str.icon
