fix: UI improvements

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -616,6 +616,20 @@
       }
     }
 
+    @at-root .theme--dark & {
+      background-color: mc('grey', '900');
+      border-color: mc('grey', '700');
+
+      summary {
+        background-color: mc('grey', '900');
+        border-color: mc('grey', '700');
+      }
+
+      &[open] summary {
+        background-color: lighten(mc('grey', '900'), 5%);
+      }
+    }
+
   }
 
 }
