--- a/server/views/welcome.pug
+++ b/server/views/welcome.pug
@@ -2,12 +2,4 @@ extends master.pug
 
 block body
   #root.is-fullscreen
-    v-app
-      .onboarding
-        .onboarding-content
-          img.animated.fadeIn(src='/svg/logo-wikijs.svg', alt='Wiki.js')
-          .headline= t('welcome.title')
-          .subheading.mt-3= t('welcome.subtitle')
-          v-btn.mt-5(color='primary', href='/e/' + locale + '/home', large)
-            v-icon(left) add
-            span= t('welcome.createhome')
+    welcome(:locale=locale)
