--- a/server/views/page.pug
+++ b/server/views/page.pug
@@ -21,20 +21,8 @@ block body
       :is-published=page.isPublished.toString()
       :toc=page.toc
       :page-id=page.id
+      :sidebar=sidebar
       )
-      template(slot='sidebar')
-        each navItem in sidebar
-          if navItem.kind === 'link'
-            v-list-item(
-              href=navItem.target
-              )
-              v-list-item-avatar
-                v-icon= navItem.icon
-              v-list-item-title= navItem.label
-          else if navItem.kind === 'divider'
-            v-divider.my-2
-          else if navItem.kind === 'header'
-            v-subheader.pl-4= navItem.label
       template(slot='contents')
         div(v-pre)!= page.render
   if injectCode.body
