fix: pass eslint + puglint + jest

--- a/server/views/error.pug
+++ b/server/views/error.pug
@@ -9,7 +9,7 @@ block body
             v-layout(row)
               v-flex(xs10)
                 a(href='/'): img(src='/svg/logo-wikijs.svg')
-              v-flex(xs2).text-xs-right
+              v-flex.text-right(xs2)
                 v-btn(href='/', depressed, color='red darken-3')
                   v-icon(left) home
                   span Home
