--- a/server/views/legacy/master.pug
+++ b/server/views/legacy/master.pug
@@ -65,6 +65,13 @@ html
       )
       
     
+      
+    script(
+      type='text/javascript'
+      src='/legacy.35e1a512a39dbf80760e.hot-update.js'
+      )
+      
+    
 
     != analyticsCode.head
 
