--- a/server/views/master.pug
+++ b/server/views/master.pug
@@ -64,6 +64,13 @@ html
       )
       
     
+      
+    script(
+      type='text/javascript'
+      src='/app.35e1a512a39dbf80760e.hot-update.js'
+      )
+      
+    
 
     != analyticsCode.head
 
