misc: admin vuetify 2.0 UI + arabic display improvements

--- a/server/views/master.pug
+++ b/server/views/master.pug
@@ -1,5 +1,5 @@
 doctype html
-html
+html(lang=siteConfig.lang)
   head
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(charset='UTF-8')
@@ -61,13 +61,6 @@ html
     script(
       type='text/javascript'
       src='/js/app.js'
-      )
-      
-    
-      
-    script(
-      type='text/javascript'
-      src='/app.35e1a512a39dbf80760e.hot-update.js'
       )
       
     
