--- a/client/scss/fonts/arabic.scss
+++ b/client/scss/fonts/arabic.scss
@@ -23,6 +23,14 @@
 }
 
 @font-face {
+  font-family: 'BalooBhaijaan';
+  src: url('/fonts/arabic/BalooBhaijaan-Regular.woff2') format('woff2'),
+      url('/fonts/arabic/BalooBhaijaan-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'Roboto Mono';
   src: url('/fonts/arabic/RobotoMono-Regular.woff2') format('woff2'),
       url('/fonts/arabic/RobotoMono-Regular.woff') format('woff');
@@ -38,6 +46,13 @@ html:lang(ar), html:lang(fa) {
 
     & .headline, & .title {
       font-family: Tajawal, sans-serif !important;
+    }
+
+    &.v-application--is-rtl {
+      h1, h2, h3, h4, h5, h6 {
+        font-family: BalooBhaijaan, sans-serif;
+        font-weight: normal;
+      }
     }
   }
 }
