fix: missing vuetify-loader in webpack prod

--- a/server/views/legacy/master.pug
+++ b/server/views/legacy/master.pug
@@ -43,6 +43,16 @@ html
 
     //- CSS
     
+      
+    link(
+      type='text/css'
+      rel='stylesheet'
+      href='/css/legacy.b8600c4bfa9b6d21f54c.css'
+      integrity='sha256-c43Iog8YvFPD9EQvD11jnxb0IYOFUtxYA2ABtJIQPmM= sha512-g1nj/OKi7ykTfsdrhgu4lqOqyKMZBvAGvjS98r9cXI96DaciNfgXtlLIGmR3wgQuGrV3n3rCs94BB6lK9OI7qA=='
+      crossorigin='use-credentials'
+    )
+      
+    
 
     script(
       crossorigin='anonymous'
@@ -54,14 +64,18 @@ html
       
     script(
       type='text/javascript'
-      src='/js/runtime.js'
+      src='/js/runtime.fc95297b6e8ae6e2e003.js'
+      integrity='sha256-6bZfGqlPATFeFRP90SGQYPuIILZahs+tXrS/eQdEUzc= sha512-tBIg4dA1HmUAT8xl3YuZu9eyiB1KWmSkI74kM2bi+BzZe12YXogJ5PHNzxb+Cnw6fjavInmnljB4X1QFzumrUw=='
+      crossorigin='use-credentials'
       )
       
     
       
     script(
       type='text/javascript'
-      src='/js/legacy.js'
+      src='/js/legacy.b8600c4bfa9b6d21f54c.js'
+      integrity='sha256-KYTyzCk08U1fUx2pAcphdJOBWcWNe3m4jAcIeeZJX2U= sha512-vOBKbPZkD3HfjP2MfM6O4yhXBXZ5WJNzukJVZMtQKw84yvUePUnJstJ6t90jy2NPO9UTaEpF3J2SNh+3DBofKQ=='
+      crossorigin='use-credentials'
       )
       
     
