--- a/server/views/setup.pug
+++ b/server/views/setup.pug
@@ -23,20 +23,34 @@ html
 
     //- CSS
     
+      
+    link(
+      type='text/css'
+      rel='stylesheet'
+      href='/css/setup.35a646a90c01e5e5f6f5.css'
+      integrity='sha256-HNu607cPBzAhzYo8xjvM307b5k18J+Vr2OWTFlMuiIw= sha512-b0KTirC8Myjz1FnIYY9fFrYoexiVj7/3N3TeuHU+IfCx2ZM+uMilVoZPe4sBC+xXTuuJIoJWwgjH3ZI1Lt6eAQ=='
+      crossorigin='use-credentials'
+    )
+      
+    
 
     //- JS
     
       
     script(
       type='text/javascript'
-      src='/js/runtime.js'
+      src='/js/runtime.fc95297b6e8ae6e2e003.js'
+      integrity='sha256-6bZfGqlPATFeFRP90SGQYPuIILZahs+tXrS/eQdEUzc= sha512-tBIg4dA1HmUAT8xl3YuZu9eyiB1KWmSkI74kM2bi+BzZe12YXogJ5PHNzxb+Cnw6fjavInmnljB4X1QFzumrUw=='
+      crossorigin='use-credentials'
       )
       
     
       
     script(
       type='text/javascript'
-      src='/js/setup.js'
+      src='/js/setup.35a646a90c01e5e5f6f5.js'
+      integrity='sha256-DS7oIW0jf1JjTIBH/NfUxFTx9ZCUd67yy0OdZ4+PqZc= sha512-dHe0IsiBCGYirAl+JqFIjQEtG/sV/QShDoppFskoqunXxGnzqM1zphxfRCX8ooKLaQrGfW9F8HNBVsUSK02HNg=='
+      crossorigin='use-credentials'
       )
       
     
