--- a/server/views/master.pug
+++ b/server/views/master.pug
@@ -47,34 +47,20 @@ html(lang=siteConfig.lang)
 
     //- CSS
     
-      
-    link(
-      type='text/css'
-      rel='stylesheet'
-      href='/css/app.303f1e1fbb500ede4cef.css'
-      integrity='sha256-wmeXKjjPKSCWT+1pyn38uD5929SyTO0vx1rq3xjLFcE= sha512-Qjh++VFQQnL0y3E0WAzvHmpT9UwTwtQBoo9vwZu02OqxG9OXRGCEJWzRPLkn/fRVP6wrlBPMSz/DVaAaeUhW1w=='
-      crossorigin='use-credentials'
-    )
-      
-    
 
     //- JS
     
       
     script(
       type='text/javascript'
-      src='/js/runtime.fc95297b6e8ae6e2e003.js'
-      integrity='sha256-6bZfGqlPATFeFRP90SGQYPuIILZahs+tXrS/eQdEUzc= sha512-tBIg4dA1HmUAT8xl3YuZu9eyiB1KWmSkI74kM2bi+BzZe12YXogJ5PHNzxb+Cnw6fjavInmnljB4X1QFzumrUw=='
-      crossorigin='use-credentials'
+      src='/js/runtime.js'
       )
       
     
       
     script(
       type='text/javascript'
-      src='/js/app.303f1e1fbb500ede4cef.js'
-      integrity='sha256-cSXcjyRtFGAvQ5BnRPbLxcr3itR1X8wgcNO5RlvMLEU= sha512-dy3W6c8IlJpAfGpMi3FibzOI6g1o65CpsEWgIZU/Fl/l0ofUxrxXP3xpfNuAaLgmQfc5l+x3IomXmeM8OBEIUQ=='
-      crossorigin='use-credentials'
+      src='/js/app.js'
       )
       
     
