fix: tags load from editor

--- a/server/views/editor.pug
+++ b/server/views/editor.pug
@@ -12,7 +12,7 @@ block body
       path=page.path
       title=page.title
       description=page.description
-      tags=page.tags
+      :tags=page.tags
       :is-published=page.isPublished
       init-mode=page.mode
       init-editor=page.editorKey
