feat: tags on page fetch + pageLinks table schema

--- a/server/views/page.pug
+++ b/server/views/page.pug
@@ -13,7 +13,7 @@ block body
       path=page.path
       title=page.title
       description=page.description
-      tags=page.tags
+      :tags=page.tags
       created-at=page.createdAt
       updated-at=page.updatedAt
       author-name=page.authorName
