misc: deps cleanup + form validation fixes

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -14,8 +14,8 @@
 
 // @import '../libs/twemoji/twemoji-awesome';
 // @import '../libs/prism/prism.css';
-@import '~vue-tour/dist/vue-tour.css';
-@import '~xterm/dist/xterm.css';
+// @import '~vue-tour/dist/vue-tour.css';
+// @import '~xterm/dist/xterm.css';
 // @import 'node_modules/diff2html/dist/diff2html.min';
 
 @import 'pages/new';
